--- a/ProjectGame/Info.plist
+++ b/ProjectGame/Info.plist
@@ -7,7 +7,7 @@
 		<string></string>
 	</array>
 	<key>Item 0 </key>
-	<string>BelweBdBTBold.ttf</string>
+	<string>BelweBT-Bold.ttf</string>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
